<resources>
    <string name="app_name">CryptoCoin Sim</string>
    <string name="comenzar">Comenzar</string>
    <string name="iniciar_sim">Iniciar Simulación</string>
    <string name="edit_text_2_ex">CriptoPepito</string>
    <string name="texv2">Ingrese su Nombre</string>
    <string name="texv3">Ingrese nombre criptomoneda</string>
    <string name="Cargar">Cargar Simulación</string>
    <string name="Nuevasim">Nueva Simulación</string>
    <string name="seldif">Selecciona Dificultad</string>
    <string name="beginner">Principiante</string>
    <string name="tut">Tutorial</string>
    <string name="advanced">Avanzado</string>
    <string name="Expert">Experto</string>
    <string name="start">Iniciar </string>
    <string name="capini">Capital Inicial (USD)</string>
    <string name="timesim">Cantidad de Tiempo (días)</string>
    <string name="dias">3</string>
    <string name="clp">100</string>
    <string name="compraboton">Comprar ฿</string>
    <string name="venderC">vender ฿</string>
    <string name="valorC">Valor ฿ :</string>
    <string name="Wallet">$</string>
    <string name="cantidad">0</string>
    <string name="cantidadCompra">Ingresa la Cantidad de ฿ a comprar:</string>
    <string name="cantcrypt">฿ : </string>
    <string name="dia">Avanzar al Día Siguiente</string>
    <string name="Fin">Fin de la Simulación ฿</string>
    <string name="cript">Seleccionar Criptomoneda</string>
    <string name="venta">Ingrese Cantidad a Vender:</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">J1e2fEmln8VlcvXQzBxpoZAnc</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">1HDjkvY8wxvv3OFOvOcrGDqelqkpNtXSReTadDxfeeAZmhf7OJ</string>

</resources>
